--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,18 @@
 [tool.poetry]
-name = "scout-sync"
-version = "2.0.0"
+name = "darts"
+version = "1.0.0"
 description = ""
 authors = ["name <e@mail.com>"]
 
 [tool.poetry.dependencies]
 python = "*"
-Flask = "*"
-google-api-python-client = "*"
-google-auth-oauthlib = "*"
-requests = "*"
-xds-protos = "*"
-arrow = "*"
-gunicorn = "*"
-APScheduler = "*"
+numpy = "*"
+scipy = "*"
+plotly = "*"
 
 [tool.poetry.dev-dependencies]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
